--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "symfony/console": "^4.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Alexsabdev\\Convrtr\\": "src"
+        }
     }
 }
