--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,8 @@
         "psr-4": {
             "Alexsabdev\\Convrtr\\": "src"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.1"
     }
 }
